--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,10 @@ $color2 : #243763;
 $color3 : #fff;
 $color4:#ff6319;
 $color5 : #3E6D9C;
+$color6: #59CE8F;
+$color7:#e14242;
+$color8:#D2D3C9;
+$color9: black;
 body {
     background-image: url('../../images/bg3.jpg');
     background-size: cover;
@@ -259,7 +263,6 @@ body {
             margin-left:35px;
             animation:shakeX;
             animation-duration: 4s;
-            // animation-iteration-count: infinite;
         }
         #button {
             height: 50px;
@@ -282,7 +285,7 @@ body {
             }
             button:hover {
                 background-color: $color4;
-                color: white;
+                color: $color3;
                 font-size: 20px;
             }
         }
@@ -296,7 +299,7 @@ body {
         padding: 15px;
         background-color: $color3;
         border-radius: 30px;
-        color: black;
+        color: $color9;
         .information {
             display: flex;
             padding: 15px;
@@ -346,7 +349,7 @@ body {
                 padding: 10px 20px;
                 font-size: 15px;
                 font-weight: 800;
-                color: black;
+                color: $color9;
                 overflow: hidden;
                 cursor: pointer;
                 border: 1px solid;
@@ -396,10 +399,11 @@ body {
         }
     }
     #result {
-        height: 700px;
+        height: 600px;
         width: 1000px;
         padding: 20px;
-        background-color: rgba(0, 8, 54, 1);
+        background-color: $color3;
+        color: $color2;
         border-radius: 30px;
         display: none;
         justify-content: center;
@@ -410,18 +414,20 @@ body {
             font-size: 30px;
             font-family: $font3;
             text-align: center;
-            margin-top: 20px;
+            margin-top: 10px;
+            color: $color5;
         }
         #points {
             font-size: 25px;
-            margin-top: 30px;
+            margin-top: 10px;
+            color: $color4;
         }
         .correction {
             width: 900px;
-            height: 380px;
+            height: 300px;
             margin: 30px auto;
             background-color: #ecf1f6;
-            color: black;
+            color: $color9;
             font-family: $font3;
             border-radius: 10px;
             overflow: scroll;
@@ -444,17 +450,17 @@ body {
                 .choix {
                     padding: 10px 20px;
                     font-size: 12px;
-                    color: #fff;
+                    color:$color3;
                     margin-left: 35px;
                     margin-bottom: 10px;
                     width: 90%;
                     border-radius: 20px;
                 }
                 #ch1 {
-                    background-color: rgb(34, 124, 112);
+                    background-color: $color6;
                 }
                 #ch2 {
-                    background-color: rgb(230, 72, 72);
+                    background-color: $color7;
                 }
             }
             .justif {
@@ -463,8 +469,9 @@ body {
                 border-radius: 10px;
                 margin-left: 20px;
                 margin-bottom: 30px;
-                background-color: rgb(144, 94, 150);
+                background-color: $color8;
                 padding: 10px 20px;
+                color: $color9;
             }
         }
         .div {
@@ -477,19 +484,21 @@ body {
                 width: 200px;
                 border: none;
                 outline: none;
-                background-color: #ff1582;
-                color: #e7f1fa;
+                background-color: $color2;
+                color: $color3;
                 border-radius: 20px;
                 font-family: $font3;
-                font-size: 18px;
+                font-size: 12px;
+                font-weight: 500;
                 cursor: pointer;
-                margin-top: 20px;
+                margin-top: 16px;
                 margin-right: 10px;
             }
             button:hover {
-                background-color: white;
-                color: #ff1582;
-                font-weight: bold;
+                background-color: $color3;
+                border: 2px solid $color4;
+                color: $color4;
+                font-weight: 700;
             }
         }
     }
